--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx wdio run ./wdio.conf.js",
+    "authentication":  "npx wdio run wdio.conf.js --suite authentication",
+    "addToCart":  "npx wdio run wdio.conf.js --suite addToCart",
+    "checkout":  "npx wdio run wdio.conf.js --suite checkout"
   },
   "author": "",
   "license": "ISC",
