--- a/package.json
+++ b/package.json
@@ -5,29 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "npx wdio run ./wdio.conf.js",
-    "authentication":  "npx wdio run wdio.conf.js --suite authentication",
-    "addToCart":  "npx wdio run wdio.conf.js --suite addToCart",
-    "checkout":  "npx wdio run wdio.conf.js --suite checkout"
+    "authentication": "npx wdio run wdio.conf.js --suite authentication",
+    "addToCart": "npx wdio run wdio.conf.js --suite addToCart",
+    "checkout": "npx wdio run wdio.conf.js --suite checkout"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@wdio/cli": "^7.12.3",
-    "dotenv": "^10.0.0",
-    "mochawesome-report-generator": "^3.1.5"
+    "@wdio/cli": "^8.6.9",
+    "dotenv": "^16.0.3",
+    "mochawesome-report-generator": "^6.2.0",
+    "wdio": "^6.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/register": "^7.15.3",
-    "@wdio/firefox-profile-service": "^7.10.1",
-    "@wdio/local-runner": "^7.12.3",
-    "@wdio/mocha-framework": "^7.12.3",
-    "@wdio/spec-reporter": "^7.10.1",
-    "chromedriver": "^93.0.1",
-    "mochawesome-screenshots": "^1.7.3",
-    "wdio-chromedriver-service": "^7.2.0",
+    "@wdio/firefox-profile-service": "^8.6.8",
+    "@wdio/local-runner": "^8.6.9",
+    "@wdio/mocha-framework": "^8.6.8",
+    "@wdio/spec-reporter": "^8.6.8",
+    "chromedriver": "^111.0.0",
+    "mochawesome-screenshots": "^1.7.0",
+    "wdio-chromedriver-service": "^8.1.1",
     "wdio-mochawesome-reporter": "^4.0.0"
   }
 }
